@@ -105,15 +105,7 @@ OpenSLP does not support all of the settings that are specified by RFC
 the implementors' opinions that they are either not useful or very difficult
 to implement with regard to their usefullness.&nbsp; The following is a
 list of options that OpenSLP has no plans to support.
-<p><b>Tracing and logging options</b>
-<blockquote>The tracing and logging options specified in the RFC are really
-only useful as debugging tools.&nbsp; Most of the logging options from
-the RFC would require possibly lengthy configuration file checks in very
-critical code paths. Therefore, the decision for now has been to make loging
-a compile time option in OpenSLP.&nbsp; The default log level should display
-enough information for the average SLP configuration. See the make file
-for details on log levels.</blockquote>
-<b>net.slp.serializedRegURL</b>
+<p><b>net.slp.serializedRegURL</b>
 <blockquote>slpd accepts the [-r] command line parameter that specifies
 the serialized registration file to use.</blockquote>
 <b>net.slp.DAActiveDiscoveryInterval</b>
